--- a/backend/package.json
+++ b/backend/package.json
@@ -17,16 +17,18 @@
     "@prisma/client": "^3.14.0",
     "fastify": "^3.29.0",
     "prisma": "^3.14.0",
+    "supertest": "^7.0.0",
     "ts-node": "^10.7.0",
-    "typescript": "^5.0.4",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/jest": "^29.5.1",
+    "@types/supertest": "^6.0.2",
     "jest": "^29.5.0",
     "nodemon": "^2.0.22",
-    "ts-jest": "^29.1.0",
-    "ts-node-dev": "^1.1.8"
+    "ts-jest": "^29.2.5",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^5.5.4"
   },
   "jest": {
     "preset": "ts-jest",
