--- a/backend/package.json
+++ b/backend/package.json
@@ -14,18 +14,19 @@
   "license": "ISC",
   "dependencies": {
     "@fastify/cors": "^7.0.0",
-    "@prisma/client": "^3.14.0",
-    "fastify": "^3.29.0",
-    "prisma": "^3.14.0",
+    "@prisma/client": "^5.19.1",
+    "fastify": "^3.29.5",
+    "react-router-dom": "^6.26.1",
     "supertest": "^7.0.0",
     "ts-node": "^10.7.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.1",
+    "@types/jest": "^29.5.12",
     "@types/supertest": "^6.0.2",
     "jest": "^29.5.0",
     "nodemon": "^2.0.22",
+    "prisma": "^5.19.1",
     "ts-jest": "^29.2.5",
     "ts-node-dev": "^1.1.8",
     "typescript": "^5.5.4"
